# url-shortner-v1

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  domain_zones.txt  pyproject.toml
alembic/: env.py
app/: main.py  models.py  schemas.py
app/core/: config.py  database.py
app/utils/: url_check.py
