[project]
name = "fastapi-url-shortner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.28.0",
    "fastapi[standard]>=0.135.3",
    "pydantic-settings>=2.14.0",
    "requests>=2.33.1",
    "ruff>=0.15.10",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
